# MsStock

./: .flake8  .gitignore  Dockerfile  README.md  api.py  pre-commit-config.yml  pyproject.toml  scratch.py
app/controller/: Stock_controller.py
app/database/: database.py  database_mock.py
app/model/: model.py
app/service/: services_stock.py
app/utils/: logger.py  setting.py
infra/: deployment.yml  pod.yml
python/: .env  Dockerfile  main.py  model.py  requirements.txt  servicesStock.py  test_stock.py  version.py
python/app/: .gitignore  Dockerfile  main.py  requirements.txt
python/app/controller/: StockController.py
python/app/tests/: test_config.py
python/controller/: StockController.py
python/database/: DatabaseMock.py  database.py
python/model/: model.py
python/service/: servicesStock.py
python/tests/: test_app.py  test_stock.py
python/tests/.pytest_cache/v/cache/: lastfailed  nodeids
tests/: test_app.py  test_config.py  test_stock.py
