[tool.poetry]
name = "msstock"
version = "0.1.0"
description = "micro service python for study"
authors = ["Rodrigo Becker <rodrigo.beckermore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
pyctuator = "^1.2.0"
pymongo = "^4.7.3"
requests = "^2.32.3"
pydantic-settings = "^2.3.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.9"
pytest = "^8.2.2"
ipython = "^8.25.0"
pre-commit = "^3.7.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
